<resources>
    <string name="app_name">주식 평단 도우미</string>

    <string name="adMob_app_id">ca-app-pub-1423291773426283~6135747835</string>
    <string name="adMob_banner_release">ca-app-pub-1423291773426283/1203178874</string>
    <string name="adMob_banner_test">ca-app-pub-3940256099942544/6300978111</string>


    <string name="bullish_market">상승장</string>
    <string name="bearish_market">하락장</string>
    <string name="account_balance">계좌 잔고</string>
    <string name="revise">수정</string>
    <string name="remove">삭제</string>
    <string name="add_buyouts">추가 매수</string>

    <string name="bullish_fire">상승장 불타기</string>
    <string name="bullish_water">상승장 물타기</string>
    <string name="bearish_fire">하락장 불타기</string>
    <string name="bearish_water">하락장 물타기</string>

    <string name="check">확인</string>

    <string name="fire_add_buyouts">불타기</string>
    <string name="water_add_buyouts">물타기</string>

    <string name="price">가격</string>
    <string name="percent">퍼센트</string>

    <string name="add_stock">종목 추가</string>

    <string name="stock_name">주식 명</string>
    <string name="stock_average_price">평균단가</string>
    <string name="stock_account">주식 수</string>
    <string name="stock_ask_remove">삭제하시겠습니까?</string>

    <string-array name="list_tab">
        <item>잔고</item>
        <item>설정</item>
    </string-array>


</resources>