<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <TextView
            android:id="@+id/tv_dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revise"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:id="@+id/tv_stock_name"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/stock_name"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@id/et_stock_name"
            app:layout_constraintTop_toBottomOf="@id/et_stock_name"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/et_stock_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/stock_name"
            android:textSize="12sp"
            android:inputType="text"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_dialogTitle"
            app:layout_constraintStart_toEndOf="@id/tv_stock_name"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tv_stock_account"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/stock_account"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@id/et_stock_account"
            app:layout_constraintTop_toBottomOf="@id/et_stock_account"
            app:layout_constraintStart_toStartOf="parent"/>



        <EditText
            android:id="@+id/et_stock_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/stock_account"
            android:inputType="number"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@id/tv_stock_account"
            app:layout_constraintTop_toBottomOf="@id/et_stock_name"
            app:layout_constraintEnd_toEndOf="parent"
            />


        <TextView
            android:id="@+id/tv_stock_average_price"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/stock_average_price"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="@id/et_stock_average_price"
            app:layout_constraintTop_toBottomOf="@id/et_stock_average_price"
            app:layout_constraintStart_toStartOf="parent"/>


        <EditText
            android:id="@+id/et_stock_average_price"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/stock_average_price"
            android:inputType="number"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_stock_average_price"
            app:layout_constraintTop_toBottomOf="@id/et_stock_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
