<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="settingFragment"
            type="jsy.stock.stocktradinghelper.stock.fragment.SettingFragment" />

        <variable
            name="settingViewModel"
            type="jsy.stock.stocktradinghelper.viewmodel.SettingViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">


        <TextView
            android:id="@+id/tv_setting_bullish_fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullish_fire"
            app:layout_constraintBottom_toBottomOf="@id/et_setting_bullish_fire"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_setting_bullish_fire" />

        <EditText
            android:id="@+id/et_setting_bullish_fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:hint="@string/bullish_fire"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/tv_setting_bullish_fire"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_setting_bullish_fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="@{()->settingFragment.btnSettingBullishFire()}"
            android:text="@string/check"
            app:layout_constraintBottom_toBottomOf="@id/et_setting_bullish_fire"
            app:layout_constraintStart_toEndOf="@id/et_setting_bullish_fire"
            app:layout_constraintTop_toTopOf="@id/et_setting_bullish_fire" />


        <TextView
            android:id="@+id/tv_setting_bullish_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bullish_water"
            app:layout_constraintBottom_toBottomOf="@id/et_setting_bullish_water"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_setting_bullish_water" />

        <EditText
            android:id="@+id/et_setting_bullish_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/bullish_water"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/tv_setting_bullish_water"
            app:layout_constraintTop_toBottomOf="@id/et_setting_bullish_fire" />

        <Button
            android:id="@+id/btn_setting_bullish_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="@{()->settingFragment.btnSettingBullishWater()}"
            android:text="@string/check"
            app:layout_constraintBottom_toBottomOf="@id/et_setting_bullish_water"
            app:layout_constraintStart_toEndOf="@id/et_setting_bullish_water"
            app:layout_constraintTop_toTopOf="@id/et_setting_bullish_water" />


        <TextView
            android:id="@+id/tv_setting_bearish_fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bearish_fire"
            app:layout_constraintBottom_toBottomOf="@id/et_setting_bearish_fire"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_setting_bearish_fire" />

        <EditText
            android:id="@+id/et_setting_bearish_fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/bearish_fire"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/tv_setting_bearish_fire"
            app:layout_constraintTop_toBottomOf="@id/et_setting_bullish_water" />

        <Button
            android:id="@+id/btn_setting_bearish_fire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="@{()->settingFragment.btnSettingBearishFire()}"
            android:text="@string/check"
            app:layout_constraintBottom_toBottomOf="@id/et_setting_bearish_fire"
            app:layout_constraintStart_toEndOf="@id/et_setting_bullish_water"
            app:layout_constraintTop_toTopOf="@id/et_setting_bearish_fire" />


        <TextView
            android:id="@+id/tv_setting_bearish_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bearish_water"
            app:layout_constraintBottom_toBottomOf="@id/et_setting_bearish_water"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/et_setting_bearish_water" />

        <EditText
            android:id="@+id/et_setting_bearish_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/bearish_water"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@id/tv_setting_bearish_water"
            app:layout_constraintTop_toBottomOf="@id/et_setting_bearish_fire" />

        <Button
            android:id="@+id/btn_setting_bearish_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:onClick="@{()->settingFragment.btnSettingBearishWater()}"
            android:text="@string/check"
            app:layout_constraintBottom_toBottomOf="@id/et_setting_bearish_water"
            app:layout_constraintStart_toEndOf="@id/et_setting_bullish_water"
            app:layout_constraintTop_toTopOf="@id/et_setting_bearish_water" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>